fix route links and add style elements

--- a/view/experiencia.html
+++ b/view/experiencia.html
@@ -17,12 +17,12 @@
     </header>
 
     <nav>
-        <a href="index.html">Inicio</a>
-        <a href="./view/blog.html">Blog</a>
-        <a href="./view/sobremi.html">Sobre mí</a>
-        <a href="./view/portafolio.html">Portafolio</a>
-        <a href="./view/experiencia.html">Experiencia</a>
-        <a href="./view/referencias.html">Referencias</a>
+        <a href="../index.html">Inicio</a>
+        <a href="../view/blog.html">Blog</a>
+        <a href="../view/sobremi.html">Sobre mí</a>
+        <a href="../view/portafolio.html">Portafolio</a>
+        <a href="../view/experiencia.html">Experiencia</a>
+        <a href="../view/referencias.html">Referencias</a>
     </nav>
 
     <section>
