--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    font-family: Arial, sans-serif;
 }
 
 header, footer {
@@ -57,4 +58,44 @@ blockquote {
     color: #555;
 }
 
+#blog article {
+    background-color: #f9f9f9;
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin-bottom: 10px;
+}
 
+#blog article h4 {
+    color: #333;
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+
+#blog article p {
+    color: #666;
+    margin-bottom: 10px;
+}
+
+#portafolio div {
+    background-color: #f9f9f9;
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+#portafolio div h4 {
+    color: #333;
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+
+#portafolio div p {
+    color: #666;
+    margin-bottom: 10px;
+}
+
+#sobremi {
+    background-color: #f9f9f9;
+    border: 1px solid #ccc;
+    padding: 20px;
+}
