--- a/view/experiencia.html
+++ b/view/experiencia.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Landing page App</title>
 <script type="text/javascript"></script>
 </head>
@@ -13,7 +14,7 @@
 
 <body>
     <header>
-        <h1>Landing Page</h1>
+        <h1>Experiencia</h1>
     </header>
 
     <nav>
