adding fix last changes archives

--- a/view/referencias.html
+++ b/view/referencias.html
@@ -29,26 +29,31 @@
 
     <section>
         <h2>Referencias</h2>
-        <div>
+        <div class="referencia">
+            <img src="../assets/img/client.png" alt="Icono del cliente">
             <h3>Cliente 1</h3>
-            <p>"[Nombre del cliente]" - [Empresa/Organización]</p>
             <blockquote>
-                "[Cita o testimonio del cliente sobre tu trabajo o servicios]"
+                "Trabajar con Cristian Jonhson ha sido una experiencia increíble. Su profesionalismo, atención al detalle y habilidades técnicas nos han ayudado a alcanzar nuestros objetivos de manera exitosa."
             </blockquote>
+            <p class="autor">Nombre del Cliente 1, Empresa ABC</p>
         </div>
-        <div>
+
+        <div class="referencia">
+            <img src="../assets/img/client.png" alt="Icono del cliente">
             <h3>Cliente 2</h3>
-            <p>"[Nombre del cliente]" - [Empresa/Organización]</p>
             <blockquote>
-                "[Cita o testimonio del cliente sobre tu trabajo o servicios]"
+                "Cristian Jonhson ha sido un colaborador valioso en nuestros proyectos. Su creatividad, compromiso y capacidad para cumplir con los plazos nos ha impresionado. ¡Lo recomendamos altamente!"
             </blockquote>
+            <p class="autor">Nombre del Cliente 2, Empresa XYZ</p>
         </div>
-        <div>
+
+        <div class="referencia">
+            <img src="../assets/img/client.png" alt="Icono del cliente">
             <h3>Cliente 3</h3>
-            <p>"[Nombre del cliente]" - [Empresa/Organización]</p>
             <blockquote>
-                "[Cita o testimonio del cliente sobre tu trabajo o servicios]"
+                "Estamos extremadamente satisfechos con el trabajo de Cristian Jonhson. Ha superado nuestras expectativas con su enfoque innovador, atención al detalle y habilidades de comunicación excepcionales."
             </blockquote>
+            <p class="autor">Nombre del Cliente 3, Empresa 123</p>
         </div>
     </section>
 
