--- a/css/style.css
+++ b/css/style.css
@@ -99,3 +99,27 @@ blockquote {
     border: 1px solid #ccc;
     padding: 20px;
 }
+
+p {
+    color: #777;
+    line-height: 1.5;
+}
+
+blockquote {
+    font-style: italic;
+    color: #555;
+}
+
+
+
+
+.referencia img {
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+    border-radius: 50%;
+}
+
+.referencia h3 {
+    margin: 0;
+}
