--- a/view/experiencia.html
+++ b/view/experiencia.html
@@ -28,18 +28,27 @@
 
     <section>
         <h2>Experiencia</h2>
-        <h3>Experiencia laboral</h3>
-        <div>
-            <h4>Título del trabajo 1</h4>
-            <p>Descripción del trabajo 1...</p>
+        
+        <div class="trabajo">
+            <h3>Desarrollador Web Senior</h3>
+            <h4>Empresa ABC</h4>
+            <p class="fechas">Enero 2018 - Presente</p>
+            <ul>
+                <li>Lideré el desarrollo de proyectos web de principio a fin, trabajando en estrecha colaboración con equipos multidisciplinarios.</li>
+                <li>Implementé soluciones técnicas innovadoras para mejorar la eficiencia y la calidad del código.</li>
+                <li>Colaboré con diseñadores y otros desarrolladores para crear interfaces y funcionalidades atractivas y de alto rendimiento.</li>
+            </ul>
         </div>
-        <div>
-            <h4>Título del trabajo 2</h4>
-            <p>Descripción del trabajo 2...</p>
-        </div>
-        <div>
-            <h4>Título del trabajo 3</h4>
-            <p>Descripción del trabajo 3...</p>
+
+        <div class="trabajo">
+            <h3>Desarrollador Frontend</h3>
+            <h4>Empresa XYZ</h4>
+            <p class="fechas">Junio 2015 - Diciembre 2017</p>
+            <ul>
+                <li>Desarrollé y mantuve sitios web utilizando tecnologías frontend como HTML, CSS y JavaScript.</li>
+                <li>Optimicé la velocidad y la accesibilidad de los sitios web para mejorar la experiencia del usuario.</li>
+                <li>Realicé pruebas y resolví problemas relacionados con la compatibilidad entre navegadores.</li>
+            </ul>
         </div>
     </section>
 
