--- a/view/portafolio.html
+++ b/view/portafolio.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Landing page App</title>
- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+<title>Landing page App - Portafolio</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -17,16 +17,16 @@
         <h1>Portafolio</h1>
     </header>
 
-    <nav class="bg-light p-2">
+    <nav>
         <a href="../index.html">Inicio</a>
-        <a href="../view/blog.html">Blog</a>
-        <a href="../view/sobremi.html">Sobre mí</a>
-        <a href="../view/portafolio.html">Portafolio</a>
-        <a href="../view/experiencia.html">Experiencia</a>
-        <a href="../view/referencias.html">Referencias</a>
+        <a href="./blog.html">Blog</a>
+        <a href="./sobremi.html">Sobre mí</a>
+        <a href="./portafolio.html">Portafolio</a>
+        <a href="./experiencia.html">Experiencia</a>
+        <a href="./referencias.html">Referencias</a>
     </nav>
 
-    <section class="container my-5">
+    <main class="container my-5">
         <h2>Portafolio</h2>
         <h3>Proyectos destacados</h3>
         <div>
@@ -41,7 +41,7 @@
             <h4>Proyecto 3</h4>
             <p>Descripción del proyecto 3...</p>
         </div>
-    </section>
+    </main>
 
     <footer class="bg-dark text-white text-center py-3">
         <p>Derechos de autor &copy; 2023. Todos los derechos reservados.</p>
