--- a/view/referencias.html
+++ b/view/referencias.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Landing page App</title>
- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+<title>Landing page App - Referencias</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -19,14 +19,14 @@
 
     <nav>
         <a href="../index.html">Inicio</a>
-        <a href="../view/blog.html">Blog</a>
-        <a href="../view/sobremi.html">Sobre mí</a>
-        <a href="../view/portafolio.html">Portafolio</a>
-        <a href="../view/experiencia.html">Experiencia</a>
-        <a href="../view/referencias.html">Referencias</a>
+        <a href="./blog.html">Blog</a>
+        <a href="./sobremi.html">Sobre mí</a>
+        <a href="./portafolio.html">Portafolio</a>
+        <a href="./experiencia.html">Experiencia</a>
+        <a href="./referencias.html">Referencias</a>
     </nav>
 
-    <section>
+    <main>
         <h2>Referencias</h2>
         <div class="referencia">
             <img src="../assets/img/client.png" alt="Icono del cliente">
@@ -54,11 +54,10 @@
             </blockquote>
             <p class="autor">Nombre del Cliente 3, Empresa 123</p>
         </div>
-    </section>
+    </main>
 
     <footer class="bg-dark text-white text-center py-3">
         <p>Derechos de autor &copy; 2023. Todos los derechos reservados.</p>
     </footer>
 </body>
-
 </html>
