--- a/view/blog.html
+++ b/view/blog.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Landing page App</title>
+<title>Landing page App - Blog</title>
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -19,14 +19,14 @@
 
     <nav>
         <a href="../index.html">Inicio</a>
-        <a href="../view/blog.html">Blog</a>
-        <a href="../view/sobremi.html">Sobre mí</a>
-        <a href="../view/portafolio.html">Portafolio</a>
-        <a href="../view/experiencia.html">Experiencia</a>
-        <a href="../view/referencias.html">Referencias</a>
+        <a href="./blog.html">Blog</a>
+        <a href="./sobremi.html">Sobre mí</a>
+        <a href="./portafolio.html">Portafolio</a>
+        <a href="./experiencia.html">Experiencia</a>
+        <a href="./referencias.html">Referencias</a>
     </nav>
 
-    <section id="blog">
+    <main id="blog">
         <h2>Blog</h2>
         <h3>Últimas entradas</h3>
         <article>
@@ -41,11 +41,10 @@
             <h4>Título de la entrada 3</h4>
             <p>Contenido de la entrada 3...</p>
         </article>
-    </section>
+    </main>
 
     <footer class="bg-dark text-white text-center py-3">
         <p>Derechos de autor &copy; 2023. Todos los derechos reservados.</p>
     </footer>
 </body>
-
 </html>
