remove id for class

--- a/view/blog.html
+++ b/view/blog.html
@@ -3,20 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Landing page App - Blog</title>
- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+<title>Landing Page App</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script type="text/javascript"></script>
 <link rel="stylesheet" href="../css/style.css">
 </head>
-
 <body>
     <header class="bg-dark text-white text-center py-3">
         <h1>Blog</h1>
     </header>
-
     <nav>
         <a href="../index.html">Inicio</a>
         <a href="./blog.html">Blog</a>
@@ -25,24 +22,24 @@
         <a href="./experiencia.html">Experiencia</a>
         <a href="./referencias.html">Referencias</a>
     </nav>
-
-    <main id="blog">
-        <h2>Blog</h2>
-        <h3>Últimas entradas</h3>
-        <article>
-            <h4>Título de la entrada 1</h4>
-            <p>Contenido de la entrada 1...</p>
-        </article>
-        <article>
-            <h4>Título de la entrada 2</h4>
-            <p>Contenido de la entrada 2...</p>
-        </article>
-        <article>
-            <h4>Título de la entrada 3</h4>
-            <p>Contenido de la entrada 3...</p>
-        </article>
+    <main>
+        <section id="blog" class="container">
+            <h2>Blog</h2>
+            <h3>Últimas entradas</h3>
+            <article>
+                <h4>Título de la entrada 1</h4>
+                <p>Contenido de la entrada 1...</p>
+            </article>
+            <article>
+                <h4>Título de la entrada 2</h4>
+                <p>Contenido de la entrada 2...</p>
+            </article>
+            <article>
+                <h4>Título de la entrada 3</h4>
+                <p>Contenido de la entrada 3...</p>
+            </article>
+        </section>
     </main>
-
     <footer class="bg-dark text-white text-center py-3">
         <p>Derechos de autor &copy; 2023. Todos los derechos reservados.</p>
     </footer>
