--- a/view/referencias.html
+++ b/view/referencias.html
@@ -3,20 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Landing page App - Referencias</title>
+<title>Landing Page App</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script type="text/javascript"></script>
 <link rel="stylesheet" href="../css/style.css">
 </head>
-
 <body>
     <header class="bg-dark text-white text-center py-3">
         <h1>Referencias</h1>
     </header>
-
     <nav>
         <a href="../index.html">Inicio</a>
         <a href="./blog.html">Blog</a>
@@ -25,37 +22,35 @@
         <a href="./experiencia.html">Experiencia</a>
         <a href="./referencias.html">Referencias</a>
     </nav>
-
     <main>
-        <h2>Referencias</h2>
-        <div class="referencia">
-            <img src="../assets/img/client.png" alt="Icono del cliente">
-            <h3>Cliente 1</h3>
-            <blockquote>
-                "Trabajar con Cristian Jonhson ha sido una experiencia increíble. Su profesionalismo, atención al detalle y habilidades técnicas nos han ayudado a alcanzar nuestros objetivos de manera exitosa."
-            </blockquote>
-            <p class="autor">Nombre del Cliente 1, Empresa ABC</p>
-        </div>
-
-        <div class="referencia">
-            <img src="../assets/img/client.png" alt="Icono del cliente">
-            <h3>Cliente 2</h3>
-            <blockquote>
-                "Cristian Jonhson ha sido un colaborador valioso en nuestros proyectos. Su creatividad, compromiso y capacidad para cumplir con los plazos nos ha impresionado. ¡Lo recomendamos altamente!"
-            </blockquote>
-            <p class="autor">Nombre del Cliente 2, Empresa XYZ</p>
-        </div>
-
-        <div class="referencia">
-            <img src="../assets/img/client.png" alt="Icono del cliente">
-            <h3>Cliente 3</h3>
-            <blockquote>
-                "Estamos extremadamente satisfechos con el trabajo de Cristian Jonhson. Ha superado nuestras expectativas con su enfoque innovador, atención al detalle y habilidades de comunicación excepcionales."
-            </blockquote>
-            <p class="autor">Nombre del Cliente 3, Empresa 123</p>
-        </div>
+        <section class="container">
+            <h2>Referencias</h2>
+            <div class="referencia">
+                <img src="../assets/img/client.png" alt="Icono del cliente">
+                <h3>Cliente 1</h3>
+                <blockquote>
+                    "Trabajar con [Tu Nombre] ha sido una experiencia increíble. Su profesionalismo, atención al detalle y habilidades técnicas nos han ayudado a alcanzar nuestros objetivos de manera exitosa."
+                </blockquote>
+                <p class="autor">Nombre del Cliente 1, Empresa ABC</p>
+            </div>
+            <div class="referencia">
+                <img src="../assets/img/client.png" alt="Icono del cliente">
+                <h3>Cliente 2</h3>
+                <blockquote>
+                    "[Tu Nombre] ha sido un colaborador valioso en nuestros proyectos. Su creatividad, compromiso y capacidad para cumplir con los plazos nos ha impresionado. ¡Lo recomendamos altamente!"
+                </blockquote>
+                <p class="autor">Nombre del Cliente 2, Empresa XYZ</p>
+            </div>
+            <div class="referencia">
+                <img src="../assets/img/client.png" alt="Icono del cliente">
+                <h3>Cliente 3</h3>
+                <blockquote>
+                    "Estamos extremadamente satisfechos con el trabajo de [Tu Nombre]. Ha superado nuestras expectativas con su enfoque innovador, atención al detalle y habilidades de comunicación excepcionales."
+                </blockquote>
+                <p class="autor">Nombre del Cliente 3, Empresa 123</p>
+            </div>
+        </section>
     </main>
-
     <footer class="bg-dark text-white text-center py-3">
         <p>Derechos de autor &copy; 2023. Todos los derechos reservados.</p>
     </footer>
