--- a/view/sobremi.html
+++ b/view/sobremi.html
@@ -3,20 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Landing page App - Sobre Mí</title>
+<title>Landing Page App</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script type="text/javascript"></script>
 <link rel="stylesheet" href="../css/style.css">
 </head>
-
 <body>
     <header class="bg-dark text-white text-center py-3">
         <h1>Sobre Mí</h1>
     </header>
-
     <nav>
         <a href="../index.html">Inicio</a>
         <a href="./blog.html">Blog</a>
@@ -25,13 +22,17 @@
         <a href="./experiencia.html">Experiencia</a>
         <a href="./referencias.html">Referencias</a>
     </nav>
-
-    <main id="sobremi">
-        <h2>Sobre mí</h2>
-        <p>Hola, soy <strong>[Tu Nombre]</strong>. Soy un <strong>[tu profesión o área de experiencia]</strong> con <strong>[X]</strong> años de experiencia en <strong>[área de experiencia]</strong>. Me apasiona <strong>[tu pasión o enfoque principal]</strong>. En mi tiempo libre, disfruto <strong>[tus pasatiempos o intereses relacionados]</strong>.</p>
-        <p>Si deseas conocer más acerca de mi trabajo y experiencia, no dudes en explorar mi portafolio y revisar las referencias de mis clientes anteriores.</p>
+    <main>
+        <section class="container">
+            <h2>Sobre Mí</h2>
+            <p>Hola, soy <strong>Cristian Jonhson Alvarez</strong>. 
+            Soy un <strong>Ingeniero en informatica</strong> 
+            con <strong>5</strong> años de experiencia en <strong>desarrollo web</strong>.
+             Me apasionan <strong>el rock, las tecnologias y las series</strong>. 
+             En mi tiempo libre, disfruto <strong>estudiar las actuales tecnologias </strong>.</p>
+            <p>Si deseas conocer más acerca de mi trabajo y experiencia, no dudes en explorar mi portafolio y revisar las referencias de mis clientes anteriores.</p>
+        </section>
     </main>
-
     <footer class="bg-dark text-white text-center py-3">
         <p>Derechos de autor &copy; 2023. Todos los derechos reservados.</p>
     </footer>
