--- a/view/experiencia.html
+++ b/view/experiencia.html
@@ -3,20 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Landing page App - Experiencia</title>
+<title>Landing Page App</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script type="text/javascript"></script>
 <link rel="stylesheet" href="../css/style.css">
 </head>
-
 <body>
     <header class="bg-dark text-white text-center py-3">
         <h1>Experiencia</h1>
     </header>
-
     <nav>
         <a href="../index.html">Inicio</a>
         <a href="./blog.html">Blog</a>
@@ -25,33 +22,31 @@
         <a href="./experiencia.html">Experiencia</a>
         <a href="./referencias.html">Referencias</a>
     </nav>
-
     <main>
-        <h2>Experiencia</h2>
-        
-        <div class="trabajo">
-            <h3>Desarrollador Web Senior</h3>
-            <h4>Empresa ABC</h4>
-            <p class="fechas">Enero 2018 - Presente</p>
-            <ul>
-                <li>Lideré el desarrollo de proyectos web de principio a fin, trabajando en estrecha colaboración con equipos multidisciplinarios.</li>
-                <li>Implementé soluciones técnicas innovadoras para mejorar la eficiencia y la calidad del código.</li>
-                <li>Colaboré con diseñadores y otros desarrolladores para crear interfaces y funcionalidades atractivas y de alto rendimiento.</li>
-            </ul>
-        </div>
-
-        <div class="trabajo">
-            <h3>Desarrollador Frontend</h3>
-            <h4>Empresa XYZ</h4>
-            <p class="fechas">Junio 2015 - Diciembre 2017</p>
-            <ul>
-                <li>Desarrollé y mantuve sitios web utilizando tecnologías frontend como HTML, CSS y JavaScript.</li>
-                <li>Optimicé la velocidad y la accesibilidad de los sitios web para mejorar la experiencia del usuario.</li>
-                <li>Realicé pruebas y resolví problemas relacionados con la compatibilidad entre navegadores.</li>
-            </ul>
-        </div>
+        <section class="container">
+            <h2>Experiencia</h2>
+            <div class="trabajo">
+                <h3>Desarrollador Web Senior</h3>
+                <h4>Empresa ABC</h4>
+                <p class="fechas">Enero 2018 - Presente</p>
+                <ul>
+                    <li>Lideré el desarrollo de proyectos web de principio a fin, trabajando en estrecha colaboración con equipos multidisciplinarios.</li>
+                    <li>Implementé soluciones técnicas innovadoras para mejorar la eficiencia y la calidad del código.</li>
+                    <li>Colaboré con diseñadores y otros desarrolladores para crear interfaces y funcionalidades atractivas y de alto rendimiento.</li>
+                </ul>
+            </div>
+            <div class="trabajo">
+                <h3>Desarrollador Frontend</h3>
+                <h4>Empresa XYZ</h4>
+                <p class="fechas">Junio 2015 - Diciembre 2017</p>
+                <ul>
+                    <li>Desarrollé y mantuve sitios web utilizando tecnologías frontend como HTML, CSS y JavaScript.</li>
+                    <li>Optimicé la velocidad y la accesibilidad de los sitios web para mejorar la experiencia del usuario.</li>
+                    <li>Realicé pruebas y resolví problemas relacionados con la compatibilidad entre navegadores.</li>
+                </ul>
+            </div>
+        </section>
     </main>
-
     <footer class="bg-dark text-white text-center py-3">
         <p>Derechos de autor &copy; 2023. Todos los derechos reservados.</p>
     </footer>
