add content blog

--- a/view/blog.html
+++ b/view/blog.html
@@ -23,21 +23,23 @@
         <a href="./referencias.html">Referencias</a>
     </nav>
     <main>
-        <section id="blog" class="container">
-            <h2>Blog</h2>
+        <section id="blog" class="container">   
             <h3>Últimas entradas</h3>
             <article>
-                <h4>Título de la entrada 1</h4>
-                <p>Contenido de la entrada 1...</p>
+                <h4>Descubriendo las últimas tendencias en desarrollo web</h4>
+                <p>En el mundo del desarrollo web, las tendencias están en constante evolución. En esta entrada, exploraremos algunas de las últimas tendencias en diseño y tecnología que están dando forma al panorama del desarrollo web en este año.</p>
             </article>
+            
             <article>
-                <h4>Título de la entrada 2</h4>
-                <p>Contenido de la entrada 2...</p>
+                <h4>Consejos para optimizar el rendimiento de tu sitio web</h4>
+                <p>La velocidad y el rendimiento de un sitio web son fundamentales para brindar una experiencia excepcional al usuario. En esta entrada, compartiremos consejos prácticos y herramientas para mejorar el rendimiento de tu sitio y reducir los tiempos de carga.</p>
             </article>
+            
             <article>
-                <h4>Título de la entrada 3</h4>
-                <p>Contenido de la entrada 3...</p>
+                <h4>Los beneficios del diseño responsive en dispositivos móviles</h4>
+                <p>Con el crecimiento del uso de dispositivos móviles, el diseño responsive se ha convertido en una necesidad. Exploraremos los beneficios de adoptar un enfoque de diseño responsive y cómo puede mejorar la experiencia del usuario en diferentes dispositivos.</p>
             </article>
+            
         </section>
     </main>
     <footer class="bg-dark text-white text-center py-3">
