--- a/view/portafolio.html
+++ b/view/portafolio.html
@@ -14,13 +14,20 @@
     <header class="bg-dark text-white text-center py-3">
         <h1>Portafolio</h1>
     </header>
-    <nav>
-        <a href="../index.html">Inicio</a>
-        <a href="./blog.html">Blog</a>
-        <a href="./sobremi.html">Sobre mí</a>
-        <a href="./portafolio.html">Portafolio</a>
-        <a href="./experiencia.html">Experiencia</a>
-        <a href="./referencias.html">Referencias</a>
+    <nav class="navbar navbar-expand-md bg-light">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                <li class="nav-item"><a class="nav-link" href="./blog.html">Blog</a></li>
+                <li class="nav-item"><a class="nav-link" href="./sobremi.html">Sobre mí</a></li>
+                <li class="nav-item"><a class="nav-link" href="./portafolio.html">Portafolio</a></li>
+                <li class="nav-item"><a class="nav-link" href="./experiencia.html">Experiencia</a></li>
+                <li class="nav-item"><a class="nav-link" href="./referencias.html">Referencias</a></li>
+            </ul>
+        </div>
     </nav>
     <main>
         <section class="container">
