--- a/view/blog.html
+++ b/view/blog.html
@@ -8,8 +8,8 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="../css/style.css">
-</head>
+<link rel="stylesheet" href="../src/css/main.css">
+
 <body>
     <header class="bg-dark text-white text-center py-3">
         <h1>Blog</h1>
