--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -1,9 +1,14 @@
 // Variables
 $primary-color: #333;
 $secondary-color: #555;
-$light-color: #777;
+$light-color: #000;
 $background-color: #f9f9f9;
 $border-color: #ccc;
+$footer-color: #fff;
+
+// Gradientes
+$gradient-header: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+$gradient-nav: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
 
 // Estilos generales
 body
@@ -13,6 +18,7 @@ body
   flex-direction: column
   min-height: 100vh
   font-family: Arial, sans-serif
+  background: $gradient-header
 
 header, footer
   background-color: $primary-color
@@ -20,14 +26,19 @@ header, footer
   padding: 10px
   text-align: center
 
+footer p
+  color: $footer-color
+
 nav
   background-color: $background-color
   padding: 10px
+  color: #fff
+  background: $gradient-nav
 
 nav a
   text-decoration: none
   margin-right: 10px
-  color: $primary-color
+  color: $footer-color
   font-weight: bold
 
 main
