add fix changes styles

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -29,11 +29,20 @@ header, footer
 footer p
   color: $footer-color
 
-nav
-  background-color: $background-color
-  padding: 10px
-  color: #fff
-  background: $gradient-nav
+nav 
+  background-color: $background-color;
+  padding: 10px;
+  color: #fff;
+  background: $gradient-nav;
+
+
+nav .navbar-toggler 
+  border: none;
+  background-color: transparent;
+
+
+nav .navbar-toggler-icon 
+  background-color: $footer-color;
 
 nav a
   text-decoration: none
