--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,7 +4,8 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  font-family: Arial, sans-serif; }
+  font-family: Arial, sans-serif;
+  background: radial-gradient(circle, #eeaeca 0%, #94bbe9 100%); }
 
 header, footer {
   background-color: #333;
@@ -12,14 +13,26 @@ header, footer {
   padding: 10px;
   text-align: center; }
 
+footer p {
+  color: #fff; }
+
 nav {
   background-color: #f9f9f9;
-  padding: 10px; }
+  padding: 10px;
+  color: #fff;
+  background: linear-gradient(90deg, #020024 0%, #090979 35%, #00d4ff 100%); }
+
+nav .navbar-toggler {
+  border: none;
+  background-color: transparent; }
+
+nav .navbar-toggler-icon {
+  background-color: #fff; }
 
 nav a {
   text-decoration: none;
   margin-right: 10px;
-  color: #333;
+  color: #fff;
   font-weight: bold; }
 
 main {
@@ -36,7 +49,7 @@ h4 {
   color: #555; }
 
 p {
-  color: #777;
+  color: #000;
   line-height: 1.5; }
 
 blockquote {
