--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -37,8 +37,26 @@ nav
 
 
 nav .navbar-toggler 
-  border: none;
-  background-color: transparent;
+  border: none
+  background-color: transparent
+  position: relative
+
+  &::before, &::after
+    content: ""
+    display: block
+    background-color: $footer-color
+    height: 3px
+    width: 30px
+    margin: 3px auto
+    position: absolute
+    left: 0
+    right: 0
+
+  &::before
+    top: -7px
+
+  &::after
+    bottom: -7px
 
 
 nav .navbar-toggler-icon 
