--- a/src/css/main.css
+++ b/src/css/main.css
@@ -24,7 +24,22 @@ nav {
 
 nav .navbar-toggler {
   border: none;
-  background-color: transparent; }
+  background-color: transparent;
+  position: relative; }
+  nav .navbar-toggler::before, nav .navbar-toggler::after {
+    content: "";
+    display: block;
+    background-color: #fff;
+    height: 3px;
+    width: 30px;
+    margin: 3px auto;
+    position: absolute;
+    left: 0;
+    right: 0; }
+  nav .navbar-toggler::before {
+    top: -7px; }
+  nav .navbar-toggler::after {
+    bottom: -7px; }
 
 nav .navbar-toggler-icon {
   background-color: #fff; }
