add import cdn Animate CSS

--- a/view/sobremi.html
+++ b/view/sobremi.html
@@ -9,10 +9,12 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="../src/css/main.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
 </head>
 <body>
     <header class="bg-dark text-white text-center py-3">
-        <h1>Sobre Mí</h1>
+        <h1 >Sobre Mí</h1>
     </header>
     <nav class="navbar navbar-expand-md bg-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
