add import CDN Animate CSS

--- a/view/blog.html
+++ b/view/blog.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="bg-dark text-white text-center py-3">
-        <h1>Blog</h1>
+        <h1 class="animate__animated animate__bounce">Blog</h1>
     </header>
     <nav class="navbar navbar-expand-md bg-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
@@ -51,7 +51,7 @@
         </section>
     </main>
     <footer class="bg-dark text-white text-center py-3">
-        <p>Derechos de autor &copy; 2023. Todos los derechos reservados.</p>
+        <p class="animate__animated animate__bounce">Derechos de autor &copy; 2023. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
