--- a/view/referencias.html
+++ b/view/referencias.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header class="bg-dark text-white text-center py-3">
-        <h1>Referencias</h1>
+        <h1 class="animate__animated animate__bounce">Referencias</h1>
     </header>
     <nav class="navbar navbar-expand-md bg-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
@@ -33,7 +33,7 @@
     </nav>
     <main>
         <section class="container">
-            <h2>Referencias</h2>
+            <h2 class="animate__animated animate__bounce">Referencias</h2>
             <div class="referencia">
                 <img src="../assets/img/client.png" alt="Icono del cliente">
                 <h3>Cliente 1</h3>
@@ -61,7 +61,7 @@
         </section>
     </main>
     <footer class="bg-dark text-white text-center py-3">
-        <p>Derechos de autor &copy; 2023. Todos los derechos reservados.</p>
+        <p class="animate__animated animate__bounce">Derechos de autor &copy; 2023. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
