--- a/view/sobremi.html
+++ b/view/sobremi.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header class="bg-dark text-white text-center py-3">
-        <h1 >Sobre Mí</h1>
+        <h1 class="animate__animated animate__bounce">Sobre Mí</h1>
     </header>
     <nav class="navbar navbar-expand-md bg-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
@@ -44,7 +44,7 @@
         </section>
     </main>
     <footer class="bg-dark text-white text-center py-3">
-        <p>Derechos de autor &copy; 2023. Todos los derechos reservados.</p>
+        <p class="animate__animated animate__bounce">Derechos de autor &copy; 2023. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
