--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -10,6 +10,15 @@ $footer-color: #fff;
 $gradient-header: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
 $gradient-nav: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
 
+// Mixin para botones personalizados
+@mixin boton-personalizado($color-fondo, $color-texto)
+  background-color: $color-fondo;
+  color: $color-texto;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+
 // Estilos generales
 body
   margin: 0;
