--- a/view/experiencia.html
+++ b/view/experiencia.html
@@ -11,7 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="./src/css/main.css" />
+    <link rel="stylesheet" href="../src/css/main.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header class="bg-dark text-white text-center py-3">
-      <h1 class="animate__animated animate__bounce">Landing Page</h1>
+      <h1 class="animate__animated animate__bounce">Experiencia</h1>
     </header>
     <nav class="navbar navbar-expand-md bg-light">
       <button
@@ -33,40 +33,69 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Inicio</a>
+            <a class="nav-link" href="../index.html">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../blog.html">Blog</a>
+            <a class="nav-link" href="./blog.html">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../sobremi.html">Sobre mí</a>
+            <a class="nav-link" href="./sobremi.html">Sobre mí</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../portafolio.html">Portafolio</a>
+            <a class="nav-link" href="./portafolio.html">Portafolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../experiencia.html">Experiencia</a>
+            <a class="nav-link" href="./experiencia.html">Experiencia</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../referencias.html">Referencias</a>
+            <a class="nav-link" href="./referencias.html">Referencias</a>
           </li>
         </ul>
       </div>
     </nav>
-    <main class="container my-5">
-      <h2>Bienvenido a mi Landing Page</h2>
-      <p>
-        ¡Hola! Soy <strong>Cristian Jonhson Alvarez</strong>, un
-        <strong>Ingeniero en informatica</strong>. Esta es mi Landing Page donde
-        puedes encontrar información sobre mis servicios, proyectos anteriores y
-        experiencias.
-      </p>
-      <p>
-        Explora las diferentes secciones utilizando el menú de navegación
-        superior para descubrir más acerca de mí y mi trabajo. Si tienes alguna
-        pregunta o deseas discutir una colaboración, no dudes en
-        <em>contactarme</em> utilizando los detalles de contacto proporcionados.
-      </p>
+    <main>
+      <section class="container">
+        <h2>Experiencia</h2>
+        <div class="trabajo">
+          <h3>Desarrollador Web Senior</h3>
+          <h4>Empresa ABC</h4>
+          <p class="fechas">Enero 2018 - Presente</p>
+          <ul>
+            <li>
+              Lideré el desarrollo de proyectos web de principio a fin,
+              trabajando en estrecha colaboración con equipos
+              multidisciplinarios.
+            </li>
+            <li>
+              Implementé soluciones técnicas innovadoras para mejorar la
+              eficiencia y la calidad del código.
+            </li>
+            <li>
+              Colaboré con diseñadores y otros desarrolladores para crear
+              interfaces y funcionalidades atractivas y de alto rendimiento.
+            </li>
+          </ul>
+        </div>
+        <div class="trabajo">
+          <h3>Desarrollador Frontend</h3>
+          <h4>Empresa XYZ</h4>
+          <p class="fechas">Junio 2015 - Diciembre 2017</p>
+          <ul>
+            <li>
+              Desarrollé y mantuve sitios web utilizando tecnologías frontend
+              como HTML, CSS y JavaScript.
+            </li>
+            <li>
+              Optimicé la velocidad y la accesibilidad de los sitios web para
+              mejorar la experiencia del usuario.
+            </li>
+            <li>
+              Realicé pruebas y resolví problemas relacionados con la
+              compatibilidad entre navegadores.
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer class="bg-dark text-white text-center py-3">
       <p class="animate__animated animate__bounce">
