--- a/view/experiencia.html
+++ b/view/experiencia.html
@@ -62,17 +62,20 @@
           <p class="fechas">Enero 2018 - Presente</p>
           <ul>
             <li>
-              Lideré el desarrollo de proyectos web de principio a fin,
-              trabajando en estrecha colaboración con equipos
-              multidisciplinarios.
+              Lideré equipos multidisciplinarios en el desarrollo completo de
+              proyectos web, desde la conceptualización hasta la implementación,
+              asegurando la alineación con los objetivos del negocio.
             </li>
             <li>
-              Implementé soluciones técnicas innovadoras para mejorar la
-              eficiencia y la calidad del código.
+              Diseñé e implementé soluciones técnicas innovadoras para aumentar
+              la eficiencia y calidad del código, lo que resultó en mejoras
+              significativas en el rendimiento de las aplicaciones web.
             </li>
             <li>
-              Colaboré con diseñadores y otros desarrolladores para crear
-              interfaces y funcionalidades atractivas y de alto rendimiento.
+              Trabajé en estrecha colaboración con diseñadores y otros
+              desarrolladores para crear interfaces de usuario atractivas y
+              altamente funcionales que brindaron experiencias excepcionales a
+              los usuarios finales.
             </li>
           </ul>
         </div>
@@ -82,16 +85,19 @@
           <p class="fechas">Junio 2015 - Diciembre 2017</p>
           <ul>
             <li>
-              Desarrollé y mantuve sitios web utilizando tecnologías frontend
-              como HTML, CSS y JavaScript.
+              Fui responsable del desarrollo y mantenimiento de diversos sitios
+              web utilizando tecnologías frontend como HTML, CSS y JavaScript,
+              garantizando su funcionamiento óptimo y su atractivo visual.
             </li>
             <li>
-              Optimicé la velocidad y la accesibilidad de los sitios web para
-              mejorar la experiencia del usuario.
+              Realicé mejoras significativas en la velocidad y accesibilidad de
+              los sitios web, lo que se tradujo en una experiencia de usuario
+              más satisfactoria y una retención de usuarios más alta.
             </li>
             <li>
-              Realicé pruebas y resolví problemas relacionados con la
-              compatibilidad entre navegadores.
+              Abordé con éxito problemas de compatibilidad entre navegadores,
+              asegurando que los sitios web funcionaran sin problemas en una
+              variedad de plataformas y dispositivos.
             </li>
           </ul>
         </div>
