--- a/view/portafolio.html
+++ b/view/portafolio.html
@@ -1,84 +1,176 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Landing Page App</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="../src/css/main.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Landing Page App</title>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="../src/css/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+  </head>
+  <body>
     <header class="bg-dark text-white text-center py-3">
-        <h1 class="animate__animated animate__bounce">Portafolio</h1>
+      <h1 class="animate__animated animate__bounce">Portafolio</h1>
     </header>
     <nav class="navbar navbar-expand-md bg-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
-                <li class="nav-item"><a class="nav-link" href="./blog.html">Blog</a></li>
-                <li class="nav-item"><a class="nav-link" href="./sobremi.html">Sobre mí</a></li>
-                <li class="nav-item"><a class="nav-link" href="./portafolio.html">Portafolio</a></li>
-                <li class="nav-item"><a class="nav-link" href="./experiencia.html">Experiencia</a></li>
-                <li class="nav-item"><a class="nav-link" href="./referencias.html">Referencias</a></li>
-            </ul>
-        </div>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="../index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./blog.html">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./sobremi.html">Sobre mí</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./portafolio.html">Portafolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./experiencia.html">Experiencia</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./referencias.html">Referencias</a>
+          </li>
+        </ul>
+      </div>
     </nav>
     <main>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-9">
-                    <section class="container">
-                        <h2>Portafolio</h2>
-                        <h3>Proyectos destacados</h3>
-                        <div class="proyecto">
-                            <h4>Sitio web de comercio electrónico</h4>
-                            <p>Desarrollo de una plataforma de comercio electrónico completa utilizando tecnologías modernas como React.js y Node.js. El proyecto incluyó integración de pasarelas de pago y administración de inventario.</p>
-                        </div>
-                        <div class="proyecto">
-                            <h4>Aplicación móvil de fitness</h4>
-                            <p>Creación de una aplicación móvil para seguimiento de actividad física y planificación de entrenamientos. La app se desarrolló en Flutter y se conectó con una base de datos en tiempo real para un seguimiento preciso.</p>
-                        </div>
-                        <div class="proyecto">
-                            <h4>Página web corporativa</h4>
-                            <p>Diseño y desarrollo de un sitio web corporativo para una empresa de consultoría. Se enfocó en la presentación de la marca, servicios ofrecidos y testimonios de clientes satisfechos.</p>
-                        </div>
-                        <!-- Agrega más proyectos aquí -->
-                    </section>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-9">
+            <section class="container">
+              <h2>Portafolio</h2>
+              <h3>Proyectos destacados</h3>
+              <div class="proyecto">
+                <h4>Sitio web de comercio electrónico</h4>
+                <p>
+                  Desarrollé un sitio web de comercio electrónico completo
+                  utilizando tecnologías modernas como React.js y Node.js. Este
+                  proyecto incluyó la integración de pasarelas de pago seguras y
+                  una sólida administración de inventario. El resultado fue un
+                  sitio web que permitió a los clientes comprar de manera fácil
+                  y segura.
+                </p>
+                <p>
+                  Mi contribución incluyó la creación de una interfaz de usuario
+                  atractiva y receptiva, la configuración de sistemas de
+                  seguridad para proteger los datos de los clientes y la
+                  optimización del rendimiento para tiempos de carga rápidos.
+                </p>
+              </div>
+
+              <div class="proyecto">
+                <h4>Aplicación móvil de fitness</h4>
+                <p>
+                  Para este emocionante proyecto, desarrollé una aplicación
+                  móvil de seguimiento de actividad física y planificación de
+                  entrenamientos. Utilicé Flutter para crear una aplicación
+                  nativa con una interfaz de usuario elegante y un rendimiento
+                  excepcional.
+                </p>
+                <p>
+                  La aplicación se conectó a una base de datos en tiempo real
+                  para proporcionar a los usuarios un seguimiento preciso de su
+                  actividad física. También incluyó características como la
+                  planificación de entrenamientos personalizados y el
+                  seguimiento de progreso.
+                </p>
+              </div>
+
+              <div class="proyecto">
+                <h4>Página web corporativa</h4>
+                <p>
+                  Colaboré en el diseño y desarrollo de una página web
+                  corporativa para una empresa de consultoría líder. Nuestro
+                  enfoque fue destacar la marca de la empresa, presentar los
+                  servicios ofrecidos y mostrar testimonios de clientes
+                  satisfechos.
+                </p>
+                <p>
+                  Mi contribución se centró en crear una experiencia de usuario
+                  fluida y atractiva. Utilicé tecnologías web modernas para
+                  garantizar que la página fuera receptiva en todos los
+                  dispositivos y que el contenido se entregara de manera
+                  efectiva a los visitantes del sitio.
+                </p>
+              </div>
+            </section>
+          </div>
+          <div class="col-md-3">
+            <div
+              id="carouselExampleControls"
+              class="carousel slide"
+              data-ride="carousel"
+            >
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img
+                    src="../assets/img/client.png"
+                    class="d-block w-100"
+                    alt="Imagen 1"
+                  />
                 </div>
-                <div class="col-md-3">
-                    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="../assets/img/client.png" class="d-block w-100" alt="Imagen 1">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="../assets/img/client.png" class="d-block w-100" alt="Imagen 2">
-                            </div>
-                            <!-- Agrega más imágenes aquí -->
-                        </div>
-                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                        </a>
-                    </div>
+                <div class="carousel-item">
+                  <img
+                    src="../assets/img/client.png"
+                    class="d-block w-100"
+                    alt="Imagen 2"
+                  />
                 </div>
+                <!-- Agrega más imágenes aquí -->
+              </div>
+              <a
+                class="carousel-control-prev"
+                href="#carouselExampleControls"
+                role="button"
+                data-slide="prev"
+              >
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a
+                class="carousel-control-next"
+                href="#carouselExampleControls"
+                role="button"
+                data-slide="next"
+              >
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="sr-only">Next</span>
+              </a>
             </div>
+          </div>
         </div>
+      </div>
     </main>
     <footer class="bg-dark text-white text-center py-3">
-        <p class="animate__animated animate__bounce">Derechos de autor &copy; 2023. Todos los derechos reservados.</p>
+      <p class="animate__animated animate__bounce">
+        Derechos de autor &copy; 2023. Todos los derechos reservados.
+      </p>
     </footer>
-</body>
+  </body>
 </html>
