--- a/view/sobremi.html
+++ b/view/sobremi.html
@@ -1,50 +1,99 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Landing Page App</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="../src/css/main.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Landing Page App</title>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="../src/css/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+  </head>
+  <body>
     <header class="bg-dark text-white text-center py-3">
-        <h1 class="animate__animated animate__bounce">Sobre Mí</h1>
+      <h1 class="animate__animated animate__bounce">Sobre Mí</h1>
     </header>
     <nav class="navbar navbar-expand-md bg-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
-                <li class="nav-item"><a class="nav-link" href="./blog.html">Blog</a></li>
-                <li class="nav-item"><a class="nav-link" href="./sobremi.html">Sobre mí</a></li>
-                <li class="nav-item"><a class="nav-link" href="./portafolio.html">Portafolio</a></li>
-                <li class="nav-item"><a class="nav-link" href="./experiencia.html">Experiencia</a></li>
-                <li class="nav-item"><a class="nav-link" href="./referencias.html">Referencias</a></li>
-            </ul>
-        </div>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="../index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./blog.html">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./sobremi.html">Sobre mí</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./portafolio.html">Portafolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./experiencia.html">Experiencia</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./referencias.html">Referencias</a>
+          </li>
+        </ul>
+      </div>
     </nav>
-    
-    <main>
-        <section class="container">
-            <h2>Sobre Mí</h2>
-            <p>Hola, soy <strong>Cristian Jonhson Alvarez</strong>. 
-            Soy un <strong>Ingeniero en informatica</strong> 
-            con <strong>5</strong> años de experiencia en <strong>desarrollo web</strong>.
-             Me apasionan <strong>el rock, las tecnologias y las series</strong>. 
-             En mi tiempo libre, disfruto <strong>estudiar las actuales tecnologias </strong>.</p>
-            <p>Si deseas conocer más acerca de mi trabajo y experiencia, no dudes en explorar mi portafolio y revisar las referencias de mis clientes anteriores.</p>
-        </section>
+    <main class="container my-5">
+      <section class="about-me">
+        <h2>Sobre Mí</h2>
+        <p>
+          ¡Hola! Soy <strong>Cristian Jonhson Alvarez</strong>, un
+          <strong>Ingeniero en Informática</strong> con más de 5 años de
+          experiencia en desarrollo web y móvil. Mi pasión por la tecnología me
+          ha llevado a trabajar en una variedad de proyectos emocionantes y
+          desafiantes.
+        </p>
+        <p>
+          Mi enfoque principal es crear soluciones tecnológicas innovadoras que
+          mejoren la vida de las personas. He trabajado en el desarrollo de
+          aplicaciones web y móviles de alto rendimiento, sitios web elegantes y
+          soluciones de comercio electrónico efectivas.
+        </p>
+        <p>
+          Mi experiencia incluye programación en lenguajes como JavaScript,
+          Python y Java, así como el uso de marcos de trabajo como React,
+          Node.js. Siempre estoy buscando aprender nuevas tecnologías y
+          mantenerme al tanto de las últimas tendencias.
+        </p>
+        <p>
+          Fuera del trabajo, me encanta la música, la fotografía y viajar. Creo
+          que la creatividad y la curiosidad son esenciales tanto en el mundo de
+          la tecnología como en la vida en general.
+        </p>
+        <p>
+          Estoy emocionado por la oportunidad de trabajar en nuevos proyectos y
+          colaborar con personas apasionadas por la tecnología. Si tienes alguna
+          pregunta o deseas discutir una colaboración, no dudes en
+          <em>contactarme</em> utilizando los detalles de contacto
+          proporcionados.
+        </p>
+      </section>
     </main>
+
     <footer class="bg-dark text-white text-center py-3">
-        <p class="animate__animated animate__bounce">Derechos de autor &copy; 2023. Todos los derechos reservados.</p>
+      <p class="animate__animated animate__bounce">
+        Derechos de autor &copy; 2023. Todos los derechos reservados.
+      </p>
     </footer>
-</body>
+  </body>
 </html>
